# TripGraph-Agent-Runtime

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README.zh-CN.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-mcp.txt  requirements.txt
agents/: __init__.py  base.py  loop.py  manager.py  planner.py  planner_prompt.py
app/: __init__.py  bootstrap.py  container.py  dependencies.py  lifespan.py  main.py
config/: env_loader.py  settings.py
core/: __init__.py  dependencies.py  exceptions.py  logging.py
eval/: __init__.py  bootstrap.py  loader.py  models.py  regression.py  runner.py  scorer.py  store.py
graph/: __init__.py  builder.py  runner.py  state.py
mcp_servers/: trip_tools_server.py
memory/: __init__.py  base.py  composite.py  episodic.py  long_term.py  short_term.py
observability/: __init__.py  bootstrap.py  context.py  observer.py  profile.py
persistence/: __init__.py  async_writer.py  bootstrap.py  context.py  recorder.py  replay_service.py  serialization.py
plan/: __init__.py  context_compression.py  execution_critic.py  executor.py  failure_policy.py  final_synthesis.py  graph.py  orchestrator.py  repair.py  replanning_controller.py  resolver.py  state.py  validator.py
schemas/: __init__.py  agent.py  api_response.py  chat.py  context_compression.py  eval.py  execution_critic.py  execution_graph.py  graph_runtime.py  memory.py  persistence.py  plan.py  plan_graph.py  replanning.py  state_versioning.py  streaming.py  tool.py  tool_router.py
scripts/: demo_export_sse_persistence.py  demo_trace_run.py  eval_graph_demo.py  eval_tool_routing.py  render_diagrams.py  smoke_mcp_tools.py  (+4 more)
(+191 files in other folders)
