[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tripplan-multi-agent"
version = "0.1.0"
description = "Production-grade multi-agent AI system with FastAPI and LangGraph"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TripPlan Team" }]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2.60",
    "langchain-core>=0.3.28",
]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
]
mcp = [
    "mcp>=1.28.0,<1.29",
    # fastapi 0.115.x requires starlette<0.42; mcp pulls sse-starlette 3.x → starlette 1.x without pins
    "starlette>=0.40.0,<0.42.0",
    "sse-starlette>=2.0,<3.0",
]

[project.scripts]
tripplan-api = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = [
    "app",
    "core",
    "agents",
    "tools",
    "graph",
    "memory",
    "streaming",
    "schemas",
    "config",
    "persistence",
    "observability",
    "eval",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
